# Software_Teamwork

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CONTRIBUTING.md  README.md  package.json
.claude/: settings.json
.github/: labeler.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md  test_issue.md
.github/workflows/: auto-label.yml  codex-pr-review.yml  commitlint.yml  docker-deploy-checks.yml  go-migrations.yml  pr-guard.yml
.trellis/: .template-hashes.json
.trellis/spec/: cicd.md
apps/web/: README.md  eslint.config.js  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
deploy/: .dockerignore  .env.china.example  .env.example  Dockerfile.migrate  README.md  docker-compose.yml
deploy/seeds/: 001-local-demo-seed.sql  002-ai-gateway-model-profiles.sql
docs/: README.md  frontend-backend-contract.md  frontend-workflow.md  gateway.md  git-workflow.md  repository-settings.md  service-boundaries.md  system.md
docs/api/: gateway.openapi.yaml
docs/architecture/: current-capability-matrix.md  frontend-backend-contract.md  (+3 more)
scripts/: check_docker_environment.py  check_docker_policy.py
services/parser/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/parser/src/parser_service/backends/: ppstructurev3.md  ppstructurev3.py
services/parser/src/parser_service/http/: app.py
services/parser/tests/: test_deploy_parser_defaults.py  test_http_app.py  test_paddleocr_real_smoke.py  test_ppstructurev3_backend.py
services/parser/tests/fixtures/: paddleocr_smoke.png.b64
(+548 files in other folders)
