[project]
name = "software-teamwork-parser"
version = "0.1.0"
description = "Internal document parser runtime service for Software Teamwork."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.138.2",
    "pydantic==2.13.4",
    "uvicorn[standard]==0.49.0",
]

[project.optional-dependencies]
paddleocr = [
    "paddleocr==3.7.0",
    "paddlepaddle==3.3.1",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.0.2",
    "ruff==0.14.9",
]

[project.scripts]
parser-service = "parser_service.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parser_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "paddleocr_smoke: requires real OCR runtime; skipped unless PARSER_PADDLEOCR_SMOKE=1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
